--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazing Alarmo</title>
+    <title>Smart Coast</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,30 +72,31 @@
 </head>
     <body>
         <header>
-            <h1>Amazing Alarmo</h1>
-            <p>University of Pennsylvania, ESE 5190</p>
+            <h1>Smart Coast</h1>
+            <p>University of Pennsylvania, ESE 5160</p>
             <p>Team: Hugging Overflow</p>
-            <p>Member: Jiayang Li, Peng Su, Yuhe Zhang</p>
+            <p>Member: Jiayang Li, Mubai Luo</p>
         </header>
     <div class="content">
         <h2>Product Review</h2>
         <p class="description">
-            Alarmo is an innovative mobile alarm clock designed to help students who struggle to wake up early. Traditional alarms are limited by their fixed position: if placed near the bed, they’re too easy to turn off and fall back asleep; if placed farther away, they become inconvenient to set up each night. This mobile alarm clock effectively addresses both issues. Users can conveniently set it up bedside before sleep, and when it goes off in the morning, it automatically moves to the other side of the room, forcing the user to get out of bed and turn it off. This approach combines ease of setup with an effective way to prevent oversleeping.
-        </p>
-        <img src="alarmo1.png" alt="Alarmo">
+            The Smart Coast is an IoT device designed to promote healthy hydration habits and help the user stay hydrated throughout the day to support energy and productivity. The coast is equipped with a weight sensor that detects changes in the water cup's weight, tracking the amount of water consumed, and a humidity&temperature sensor to decide the ideal interval of water consumption. After each drinking action, the device uses Wi-Fi to transmit the time and amount of water consumed to a connected mobile app.
+This data is synchronized with the device in real time via Wi-Fi. The device also includes a buzzer to remind users to drink water if the cup has been idle for too long.
+
+       </p>
+        <img src="SmartCoastPhoto.png" alt="SmartCoast">
         <div class="video">
             <h2>Demonstration Video</h2>
-            <iframe src="https://drive.google.com/file/d/1zXn3WRigtnChVGINwl2SM2Ar0tzc402K/preview" allow="autoplay" width="640" height="360"></iframe>
+            <iframe src="" allow="autoplay" width="640" height="360"></iframe>
         </div>
-        If the video doesn't play, use this <a href="https://youtu.be/o-xq1MFMQaQ">link</a>
+        If the video doesn't play, use this <a href="https://drive.google.com/file/d/1XMepTP3UEeqvNZ6PVvqwsjlHg9IZPP2t/view?usp=drive_link">link</a>
         
     </div>
     <div class="content">
         <h2>More Information</h2>
         <p class="more-info">
-            <a href="system.html">System Diagram</a> |
-            <a href="software.html">Software Requirements Specification</a> |
-            <a href="hardware.html">Hardware Requirements Specification</a>
+            <a href="summary.html">Product Summary</a> |
+            <a href="photos.html">Photos & Screenshots</a> 
         </p>
     </div>
     <footer>
