--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ This data is synchronized with the device in real time via Wi-Fi. The device als
         <h2>More Information</h2>
         <p class="more-info">
             <a href="summary.html">Product Summary</a> |
-            <a href="photos.html">Photos & Screenshots</a> 
+            <a href="photos.html">Photos & Screenshots</a> |
+            <a href="hardware.html">Hardware Requirements</a> |
+            <a href="software.html">Software Requirements</a> 
         </p>
     </div>
     <footer>
