--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ This data is synchronized with the device in real time via Wi-Fi. The device als
         <img src="SmartCoastPhoto.png" alt="SmartCoast">
         <div class="video">
             <h2>Demonstration Video</h2>
-            <iframe src="" allow="autoplay" width="640" height="360"></iframe>
+            <iframe src="https://drive.google.com/file/d/1XMepTP3UEeqvNZ6PVvqwsjlHg9IZPP2t/preview" allow="autoplay" width="640" height="360"></iframe>
         </div>
         If the video doesn't play, use this <a href="https://drive.google.com/file/d/1XMepTP3UEeqvNZ6PVvqwsjlHg9IZPP2t/view?usp=drive_link">link</a>
         
