--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             <p>University of Pennsylvania, ESE 5160</p>
             <p>Team: Hugging Overflow</p>
             <p>Member: Jiayang Li, Mubai Luo</p>
+            <p><a href="https://github.com/ese5160/final-project-t26-hugging-overflow">Link </a>to the final embedded C firmware codebases</p>
+            <p><a href="https://github.com/ese5160/final-project-t26-hugging-overflow/blob/main/flows.json">Link</a> to Node-RED dashboard code</p>
         </header>
     <div class="content">
         <h2>Product Review</h2>
