--- a/hardware.html
+++ b/hardware.html
@@ -105,7 +105,7 @@
             <ul>
                 <li><b>Fixed</b>
                     <ul>
-                        <li>The weight sensor doesn't support I2C interface, we introduced an extra humidity&temperature sensor(AHT20) which is connected via the I2C interface.</li>
+                        <li>The weight sensor doesn't support an I²C interface, so we introduced an extra humidity & temperature sensor (AHT20), which is connected via the I²C interface.</li>
                     </ul>
                 </li>
             </ul>
@@ -125,7 +125,7 @@
             <ul>
                 <li><b>Finished</b>
                     <ul>
-                        <li>The system ran smoothly when powered by a single-cell 3.7V Li-Ion battery, with an onboard voltage regulator to provide 3.3V and 5.9V to the microcontroller and peripherals. It is worth mentioning that due to the change of the value of a feedback resistor when designing the power regulator, the output voltage of 5V became 5.9V. However, after our test, this change will not affect the normal operation of the component.</li>
+                        <li>The system ran smoothly when powered by a single-cell 3.7 V Li-Ion battery, with an onboard voltage regulator delivering 3.3 V and 5.9 V to the microcontroller and peripherals. Due to a change in the feedback resistor value when designing the power regulator, the 5 V rail became 5.9 V; our tests confirmed this does not affect normal operation of any components.</li>
                     </ul>
                     <img src="eload.jpg" alt="motor" style="width: 800px; height: auto;">
             </ul>
@@ -135,7 +135,7 @@
             <ul>
                 <li><b>Partially Finished</b>
                     <ul>
-                        <li>All the sensors and actuators successfully supported Wi-Fi communication. Due to functional adjustments, we removed receiving app settings from our project.</li>
+                        <li>All sensors and actuators successfully supported Wi-Fi communication. Due to functional adjustments, we removed the “receive app settings” feature from our project.</li>
                     </ul>
                     See the demo video for supporting evidence.
             </ul>
@@ -145,7 +145,7 @@
             <ul>
                 <li><b>Finished</b>
                     <ul>
-                        <li>Please refer to HRS 04.</li>
+                        <li>Please refer to HRS 04 for details on the battery management and voltage regulation.</li>
                     </ul>
             </ul>
         </div>        
